# Automake Settings
# Copyright (C) 2007-2018 kaoru
# $Id$

EXTRA_DIST = \
    check_test_cases.sh \
    check_type_list_type_duplication.sh \
    codesign.bat \
    copy_boost_dlls.js \
    get_solution_config.bat \
    iwyu_mappings.imp \
    make_precompiled_h.sh \
    paths.sh \
    precompiled.template.h \
    test_case_check_ignore.txt \
    zzz_check_test_cases.pl \
    zzz_check_type_list_type_duplication.pl \
    zzz_codesign.bat-skeleton \
    zzz_get_solution_config.js \
    zzz_make_function_list.pl \
    zzz_make_function_list.sh \
    zzz_make_precompiled_h.py \
    zzz_make_test_case_list.pl \
    zzz_make_test_case_list.sh \
    zzz_parse_solution_config.js
