# Automake Settings
# Copyright (C) 2007-2019 kaoru
# $Id$

EXTRA_DIST = \
    tetengo2_gui.test.props \
    application.props \
    common.props \
    compilation.props \
    compilation_debug.props \
    compilation_release.props \
    compilation_win32.props \
    compilation_x64.props \
    header_only_lib.props \
    installer.props \
    static_lib.props \
    test.props \
    tetengo2.props \
    tetengo2.test.props \
    tetengo2_detail.props \
    tetengo2_gui.props
