# Automake Settings
# Copyright (C) 2007-2013 kaoru
# $Id$

EXTRA_DIST = \
    images/kuma.png \
    images/kumakuma.jpg \
    messages/_catalogs.json \
    messages/Japanese.json \
    win32/bobura.rc \
    win32/COMCTL32.DLL.Win32.manifest \
    win32/COMCTL32.DLL.x64.manifest \
    win32/kuma.ico \
    win32/resource.h
