# Automake Settings
# Copyright (C) 2007-2014 kaoru
# $Id$

EXTRA_DIST = \
    images/dummy_file \
    messages/_catalogs.json \
    messages/Japanese.json \
    win32/bobura.rc \
    win32/bobura_app.ico \
    win32/btt_file.ico \
    win32/bttbz2_file.ico \
    win32/COMCTL32.DLL.Win32.manifest \
    win32/COMCTL32.DLL.x64.manifest \
    win32/high_dpi.manifest \
    win32/resource.h
