# Automake Settings
# Copyright (C) 2007-2012 kaoru
# $Id$

extra_headers = \
    bobura.about_dialog.h \
    bobura.application.h \
    bobura.command.about.h \
    bobura.command.exit.h \
    bobura.command.file_property.h \
    bobura.command.load_from_file.h \
    bobura.command.new_file.h \
    bobura.command.nop.h \
    bobura.command.save_to_file.h \
    bobura.command.type_list.h \
    bobura.command.type_list_impl.h \
    bobura.file_property_dialog.h \
    bobura.load_save.confirm_file_save.h \
    bobura.load_save.load_from_file.h \
    bobura.load_save.new_file.h \
    bobura.load_save.save_to_file.h \
    bobura.main_window.h \
    bobura.message.about_dialog.h \
    bobura.message.file_property_dialog_dialog.h \
    bobura.message.main_window.h \
    bobura.message.timetable_model.h \
    bobura.message.timetable_model_observer_set.h \
    bobura.message.type_list.h \
    bobura.message.type_list_impl.h \
    bobura.settings.h \
    bobura.timetable_model.h \
    bobura.type_list.h

extra_sources = \
    bobura.application.cpp \
    main.cpp

EXTRA_DIST = $(extra_headers) $(extra_sources)
