# Automake Settings
# Copyright (C) 2007-2012 kaoru
# $Id$

extra_headers = \
    bobura.about_dialog.h \
    bobura.application.h \
    bobura.basic_type_list.h \
    bobura.command.about.h \
    bobura.command.command_base.h \
    bobura.command.exit.h \
    bobura.command.file_property.h \
    bobura.command.font_color.h \
    bobura.command.horizontally_zoom_in.h \
    bobura.command.horizontally_zoom_out.h \
    bobura.command.load_from_file.h \
    bobura.command.new_file.h \
    bobura.command.nop.h \
    bobura.command.save_to_file.h \
    bobura.command.set.h \
    bobura.command.set_horizontal_scale.h \
    bobura.command.set_vertical_scale.h \
    bobura.command.vertically_zoom_in.h \
    bobura.command.vertically_zoom_out.h \
    bobura.diagram_picture_box.h \
    bobura.diagram_view.h \
    bobura.detail_type_list.h \
    bobura.file_property_dialog.h \
    bobura.font_color_dialog.h \
    bobura.load_save.confirm_file_save.h \
    bobura.load_save.load_from_file.h \
    bobura.load_save.new_file.h \
    bobura.load_save.save_to_file.h \
    bobura.main_window.h \
    bobura.main_window_menu_builder.h \
    bobura.message.about_dialog.h \
    bobura.message.diagram_picture_box.h \
    bobura.message.file_property_dialog.h \
    bobura.message.font_color_dialog.h \
    bobura.message.main_window.h \
    bobura.message.timetable_model.h \
    bobura.message.timetable_model_observer_set.h \
    bobura.message.type_list.h \
    bobura.message.type_list_impl.h \
    bobura.settings.h \
    bobura.timetable_model.h \
    bobura.type_list.h \
    bobura.view.diagram.header.h \
    bobura.view.diagram.item.h \
    bobura.view.diagram.station_line.h \
    bobura.view.diagram.time_line.h \
    bobura.view.diagram.train_line.h \
    bobura.view.diagram.utility.h \
    bobura.view.diagram.zoom.h \
    bobura.view.scale_list.h

extra_sources = \
    bobura.application.cpp \
    bobura.command.about.cpp \
    bobura.command.command_base.cpp \
    bobura.command.exit.cpp \
    bobura.command.file_property.cpp \
    bobura.command.font_color.cpp \
    bobura.command.horizontally_zoom_in.cpp \
    bobura.command.horizontally_zoom_out.cpp \
    bobura.command.load_from_file.cpp \
    bobura.command.new_file.cpp \
    bobura.command.nop.cpp \
    bobura.command.save_to_file.cpp \
    bobura.command.set.cpp \
    bobura.command.set_horizontal_scale.cpp \
    bobura.command.set_vertical_scale.cpp \
    bobura.command.vertically_zoom_in.cpp \
    bobura.command.vertically_zoom_out.cpp \
    bobura.main_window_menu_builder.cpp \
    bobura.view.diagram.zoom.cpp \
    main.cpp

EXTRA_DIST = $(extra_headers) $(extra_sources)
