# Automake Settings
# Copyright (C) 2007-2014 kaoru
# $Id$

extra_headers = \
    bobura.0namespace.h \
    bobura.about_dialog.h \
    bobura.application.h \
    bobura.basic_type_list.h \
    bobura.command.0namespace.h \
    bobura.command.about.h \
    bobura.command.command_base.h \
    bobura.command.exit.h \
    bobura.command.file_property.h \
    bobura.command.font_color.h \
    bobura.command.horizontally_zoom_in.h \
    bobura.command.horizontally_zoom_out.h \
    bobura.command.load_from_file.h \
    bobura.command.new_file.h \
    bobura.command.nop.h \
    bobura.command.open_www_tetengo_org.h \
    bobura.command.save_to_file.h \
    bobura.command.set.h \
    bobura.command.set_horizontal_scale.h \
    bobura.command.set_vertical_scale.h \
    bobura.command.train_kind.h \
    bobura.command.vertically_zoom_in.h \
    bobura.command.vertically_zoom_out.h \
    bobura.config_traits.h \
    bobura.diagram_picture_box.h \
    bobura.diagram_view.h \
    bobura.detail_type_list.h \
    bobura.file_property_dialog.h \
    bobura.font_color_dialog.h \
    bobura.load_save.0namespace.h \
    bobura.load_save.confirm_file_save.h \
    bobura.load_save.load_from_file.h \
    bobura.load_save.new_file.h \
    bobura.load_save.save_to_file.h \
    bobura.main_window.h \
    bobura.main_window_menu_builder.h \
    bobura.message.0namespace.h \
    bobura.message.about_dialog.h \
    bobura.message.diagram_picture_box.h \
    bobura.message.diagram_selection_observer_set.h \
    bobura.message.diagram_view.h \
    bobura.message.file_property_dialog.h \
    bobura.message.font_color_dialog.h \
    bobura.message.main_window.h \
    bobura.message.oudia_diagram_dialog.h \
    bobura.message.property_bar.h \
    bobura.message.timetable_model.h \
    bobura.message.timetable_model_observer_set.h \
    bobura.message.train_kind_dialog.h \
    bobura.message.type_list.h \
    bobura.message.type_list_impl.h \
    bobura.oudia_diagram_dialog.h \
    bobura.property_bar.h \
    bobura.settings.h \
    bobura.timetable_model.h \
    bobura.train_kind_dialog.h \
    bobura.type_list.h \
    bobura.view.0namespace.h \
    bobura.view.diagram.0namespace.h \
    bobura.view.diagram.header.h \
    bobura.view.diagram.item.h \
    bobura.view.diagram.selection.h \
    bobura.view.diagram.station_line.h \
    bobura.view.diagram.time_line.h \
    bobura.view.diagram.train_line.h \
    bobura.view.diagram.utility.h \
    bobura.view.diagram.zoom.h \
    bobura.view.scale_list.h

extra_sources = \
    bobura.about_dialog.cpp \
    bobura.application.cpp \
    bobura.command.about.cpp \
    bobura.command.command_base.cpp \
    bobura.command.exit.cpp \
    bobura.command.file_property.cpp \
    bobura.command.font_color.cpp \
    bobura.command.horizontally_zoom_in.cpp \
    bobura.command.horizontally_zoom_out.cpp \
    bobura.command.load_from_file.cpp \
    bobura.command.new_file.cpp \
    bobura.command.nop.cpp \
    bobura.command.open_www_tetengo_org.cpp \
    bobura.command.save_to_file.cpp \
    bobura.command.set.cpp \
    bobura.command.set_horizontal_scale.cpp \
    bobura.command.set_vertical_scale.cpp \
    bobura.command.train_kind.cpp \
    bobura.command.vertically_zoom_in.cpp \
    bobura.command.vertically_zoom_out.cpp \
    bobura.file_property_dialog.cpp \
    bobura.font_color_dialog.cpp \
    bobura.main_window.cpp \
    bobura.main_window_menu_builder.cpp \
    bobura.oudia_diagram_dialog.cpp \
    bobura.train_kind_dialog.cpp \
    bobura.view.diagram.zoom.cpp \
    main.cpp

EXTRA_DIST = $(extra_headers) $(extra_sources)
