# Automake Settings
# Copyright (C) 2007-2010 kaoru
# $Id$

headers = \
    bobura.model.station.h \
    bobura.model.station_info.grade.h \
    bobura.model.timetable.h \
    bobura.model.timetable_info.station_location.h \
    bobura.model.train.h \
    bobura.model.train_info.stop.h \
    bobura.model.train_info.time.h \
    bobura.model.train_info.time_span.h \
    concept_bobura.model.Station.h \
    concept_bobura.model.Timetable.h \
    concept_bobura.model.Train.h \
    concept_bobura.model.station_info.Grade.h \
    concept_bobura.model.timetable_info.StationLocation.h \
    concept_bobura.model.train_info.Stop.h \
    concept_bobura.model.train_info.Time.h \
    concept_bobura.model.train_info.TimeSpan.h

extra_headers =

pkginclude_HEADERS = $(headers)
EXTRA_DIST = $(extra_headers)
