# Automake Settings
# Copyright (C) 2007-2012 kaoru
# $Id$

headers = \
    bobura.model.message.timetable_observer_set.h \
    bobura.model.serializer.json_reader.h \
    bobura.model.serializer.reader.h \
    bobura.model.station.h \
    bobura.model.station_info.grade.h \
    bobura.model.timetable.h \
    bobura.model.timetable_info.station_location.h \
    bobura.model.train.h \
    bobura.model.train_info.stop.h \
    bobura.model.train_info.time.h \
    bobura.model.train_info.time_span.h

extra_headers =

pkginclude_HEADERS = $(headers)
EXTRA_DIST = $(extra_headers)
