# Automake Settings
# Copyright (C) 2007-2014 kaoru
# $Id$

headers = \
    bobura.model.message.timetable_observer_set.h \
    bobura.model.serializer.bzip2_reader.h \
    bobura.model.serializer.bzip2_writer.h \
    bobura.model.serializer.json_reader.h \
    bobura.model.serializer.json_writer.h \
    bobura.model.serializer.oudia_reader.h \
    bobura.model.serializer.select_oudia_diagram.h \
    bobura.model.serializer.reader.h \
    bobura.model.serializer.reader_selector.h \
    bobura.model.serializer.reader_set.h \
    bobura.model.serializer.windia_reader.h \
    bobura.model.serializer.writer.h \
    bobura.model.serializer.writer_selector.h \
    bobura.model.serializer.writer_set.h \
    bobura.model.station.h \
    bobura.model.station_info.grade.h \
    bobura.model.timetable.h \
    bobura.model.timetable_info.font_color_set.h \
    bobura.model.timetable_info.station_interval_calculator.h \
    bobura.model.timetable_info.station_location.h \
    bobura.model.train.h \
    bobura.model.train_info.stop.h \
    bobura.model.train_info.time.h \
    bobura.model.train_info.time_span.h \
    bobura.model.train_kind.h

extra_headers = \
    bobura.model.0namespace.h \
    bobura.model.serializer.0namespace.h \
    bobura.model.station_info.0namespace.h \
    bobura.model.timetable_info.0namespace.h \
    bobura.model.train_info.0namespace.h

pkginclude_HEADERS = $(headers)
EXTRA_DIST = $(extra_headers)
