# Automake Settings
# Copyright (C) 2007-2013 kaoru
# $Id$

headers = \
    tetengo2.concurrent.channel.h \
    tetengo2.concurrent.consumer.h \
    tetengo2.concurrent.producer.h \
    tetengo2.config.config_base.h \
    tetengo2.config.config_list.h \
    tetengo2.config.temporary_config.h \
    tetengo2.cpp11.h \
    tetengo2.message.messages.h \
    tetengo2.message.message_catalog.h \
    tetengo2.message.message_catalog_parser.h \
    tetengo2.meta.assoc_list.h \
    tetengo2.text.h \
    tetengo2.text.encoder.h \
    tetengo2.text.encoding.encoding.h \
    tetengo2.text.encoding.ascii.h \
    tetengo2.text.encoding.cp932.h \
    tetengo2.text.encoding.locale.h \
    tetengo2.text.encoding.utf8.h \
    tetengo2.text.grammar.json.h \
    tetengo2.text.pull_parser.h \
    tetengo2.text.push_parser.h \
    tetengo2.unique.h

extra_headers =

pkginclude_HEADERS = $(headers)
EXTRA_DIST = $(extra_headers)
